--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ header form {
 }
 
 .form-group input {
-	/* padding: 15px 30px; */
+   	padding: 10px 15px; 	 
 	font-family: inherit;
 	width: 300px;
 	border: none;
@@ -99,7 +99,7 @@ header form {
 	cursor: pointer;
 	font-weight: 500;
 	letter-spacing: 2px;
-    
+
 }
 
 .btn-search:hover {
@@ -107,7 +107,7 @@ header form {
 	color: #000;
 }
 
-/* Btn Filter */
+/* Boton */
 .container-filter {
 	display: flex;
 }
@@ -147,7 +147,7 @@ header form {
 	justify-content: center;
 	border-radius: 5px;
 	height: 250px;
-    
+
 }
 
 .card-img img {
@@ -182,12 +182,12 @@ header form {
 	color: #fff;
 }
 
-.card-pokemon:hover{
-    transform: scale(1.1);
+.card-pokemon:hover {
+	transform: scale(1.1);
 	transform-origin: center;
 }
 
-/* Types of Pokemon */
+/* Tipos de Pokemon */
 .water {
 	background-color: var(--color-water);
 }
@@ -302,9 +302,8 @@ header form {
 }
 
 /* 
-======================================= 
-Styles of Pokemon Single Page
-======================================= 
+
+Estilos de Pokemon 
 */
 
 .main-pokemon {
@@ -366,7 +365,7 @@ Styles of Pokemon Single Page
 	margin-top: 20px;
 }
 
-.group-info{
+.group-info {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -377,7 +376,7 @@ Styles of Pokemon Single Page
 	font-size: 20px;
 }
 
-/* Stats */
+/* Estadisticas */
 .container-stats {
 	display: flex;
 	gap: 50px;
@@ -410,20 +409,20 @@ Styles of Pokemon Single Page
 	border-radius: 10px;
 }
 
-/* Search Page */
+/* Pagina de busca */
 
-.p-search{
+.p-search {
 	margin-bottom: 30px;
 	font-size: 22px;
 }
 
-.p-search span{
+.p-search span {
 	font-weight: 700;
 }
 
 /* Loader */
 
-.container-loader{
+.container-loader {
 	display: flex;
 	justify-content: center;
 	margin: 200px 0;
@@ -431,7 +430,7 @@ Styles of Pokemon Single Page
 
 /* Btn Load More */
 
-.container-btn-load-more{
+.container-btn-load-more {
 	display: flex;
 	justify-content: center;
 
@@ -439,7 +438,7 @@ Styles of Pokemon Single Page
 	margin-top: 20px;
 }
 
-.btn-load-more{
+.btn-load-more {
 	border: none;
 	padding: 15px 40px;
 	font-family: inherit;
@@ -449,10 +448,9 @@ Styles of Pokemon Single Page
 	cursor: pointer;
 }
 
-.btn-load-more:hover{
+.btn-load-more:hover {
 	background-color: var(--color-primary-hover);
 	color: #000;
 	transform: scale(1.2);
 	transform-origin: center;
 }
-
